exports[`test can specify a maximum x skew 1`] = `
<div
  style={
    Object {
      "transform": "skew(1.1deg, 1.1deg)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can specify a maximum y skew 1`] = `
<div
  style={
    Object {
      "transform": "skew(10deg, 10deg)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can specify a minimum x skew 1`] = `
<div
  style={
    Object {
      "transform": "skew(0.1deg, 0.1deg)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can specify a minimum y skey 1`] = `
<div
  style={
    Object {
      "transform": "skew(0.1deg, 0.1deg)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out 0ms",
    }
  }>
  Children
</div>
`;

exports[`test has no scale when inactive 1`] = `
<div
  style={
    Object {
      "transform": "skew(0deg, 0deg)",
      "transformOrigin": "center center",
      "transition": "transform 600ms ease-in-out 0ms",
    }
  }>
  Children
</div>
`;
